--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^5.1.3",
+		"@hookform/resolvers": "^3.6.0",
 		"@prisma/client": "^5.15.0",
+		"@radix-ui/react-dialog": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
-		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.383.0",
@@ -24,8 +27,10 @@
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.52.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
