--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@uploadthing/react": "^6.6.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.383.0",
@@ -30,6 +31,7 @@
 		"react-hook-form": "^7.52.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^6.12.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
