--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@uploadthing/react": "^6.6.0",
+		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.383.0",
@@ -32,12 +33,14 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.12.0",
+		"uuid": "^10.0.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/uuid": "^10.0.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
