--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@radix-ui/react-dialog": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.1",
 		"@uploadthing/react": "^6.6.0",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
