--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.12.0",
 		"uuid": "^10.0.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
