--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.1",
 		"@uploadthing/react": "^6.6.0",
+		"auto-zustand-selectors-hook": "^2.0.4",
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"immer": "^10.1.1",
 		"lucide-react": "^0.383.0",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
@@ -49,6 +51,7 @@
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
 		"prisma": "^5.15.0",
+		"simple-zustand-devtools": "^1.1.0",
 		"tailwindcss": "^3.4.1",
 		"ts-node": "^10.9.2",
 		"typescript": "^5"
