--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@clerk/nextjs": "^5.1.3",
 		"@hookform/resolvers": "^3.6.0",
 		"@prisma/client": "^5.15.0",
+		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.0",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.1.0",
