--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"lucide-react": "^0.383.0",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
+		"query-string": "^9.0.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.0",
