--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"axios": "^1.7.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.0.0",
 		"immer": "^10.1.1",
 		"lucide-react": "^0.383.0",
 		"next": "14.2.3",
