setup socket io

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.0",
+		"socket.io": "^4.7.5",
+		"socket.io-client": "^4.7.5",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.12.0",
