--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.1",
+		"@tanstack/react-query": "^5.47.0",
 		"@uploadthing/react": "^6.6.0",
 		"auto-zustand-selectors-hook": "^2.0.4",
 		"axios": "^1.7.2",
