--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"date-fns": "^3.6.0",
 		"immer": "^10.1.1",
 		"lucide-react": "^0.383.0",
 		"next": "14.2.3",
