--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@emoji-mart/data": "^1.2.1",
 		"@emoji-mart/react": "^1.1.1",
 		"@hookform/resolvers": "^3.6.0",
+		"@livekit/components-react": "^2.3.3",
+		"@livekit/components-styles": "^1.0.12",
 		"@prisma/client": "^5.15.0",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -37,6 +39,7 @@
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
 		"immer": "^10.1.1",
+		"livekit-server-sdk": "^2.5.0",
 		"lucide-react": "^0.383.0",
 		"next": "14.2.3",
 		"next-themes": "^0.3.0",
